api get shop param shop name
