# src/handler/shop/menu.go
@@ -14,11 +14,14 @@ import (
 // @Summary 取得菜單
 // @Description 取得菜單
 // @Produce  json
+// @Param shop path string true "商店"
 // @Success 200 {array} resp.MenuKind "菜單"
 // @Failure 500 {string} string "内部错误"
-// @Router /shop/menu [get]
+// @Router /shop/menu/{shop} [get]
 func GetMenu(c *gin.Context) {
-	data, err := logic.GetMenu()
+	shop := c.Param("shop")
+
+	data, err := logic.GetMenu(shop)
 	if err != nil {
 		c.AbortWithError(http.StatusBadRequest, err)
 		return
